--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -30,6 +30,7 @@ catalogs:
   dev:
     '@antfu/eslint-config': ^4.11.0
     '@iconify-json/carbon': ^1.2.8
+    '@tauri-apps/cli': ^2
     '@vue-macros/volar': ^3.0.0-beta.7
     '@vue/test-utils': ^2.4.6
     cypress: ^14.2.1
@@ -46,6 +47,8 @@ catalogs:
     vue-tsc: ^2.2.8
 
   frontend:
+    '@tauri-apps/api': ^2
+    '@tauri-apps/plugin-opener': ^2
     '@unhead/vue': ^2.0.2
     '@unocss/reset': ^66.1.0-beta.7
     '@vueuse/core': ^13.0.0
